# Lab5_2024

./: Makefile  README.md  config.py  dataset.py  fetures.py  main.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
modeling/: predict.py  train.py
new_module/: __init__.py  dataset.py  features.py  plots.py
new_module/modeling/: predict.py  train.py
notebooks/: knn.py  knn_torch.ipynb
